<resources>
    <string name="app_name">UNTurno</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_forget">Forget</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_restaurant">Comedores Ciudad Universitaria</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">Mapa</string>

    <string name="entrada_prompt">Elegir una entrada</string>

    <string-array name="entrada_arrays">
        <item>Sopa de arroz</item>
        <item>Crema de pollo</item>
    </string-array>

    <string name="principio_prompt">Elegir un principio</string>

    <string-array name="principio_arrays">
        <item>Frijoles</item>
        <item>Goulash</item>
    </string-array>

    <string name="plato_prompt">Elegir un seco</string>

    <string-array name="plato_arrays">
        <item>Arroz blanco</item>
        <item>Arroz de coco</item>
    </string-array>

    <string name="ensalada_prompt">Elegir una ensalada</string>

    <string-array name="ensalada_arrays">
        <item>Ensalada rusa</item>
        <item>Pepino</item>
        <item>Sin ensalada</item>
    </string-array>

    <string name="jugo_prompt">Elegir un jugo</string>

    <string-array name="jugo_arrays">
        <item>Mora</item>
        <item>Lulo</item>
    </string-array>

    <string name="postre_prompt">Elegir un postre</string>

    <string-array name="postre_arrays">
        <item>Bocadillo</item>
        <item>Gelatina</item>
    </string-array>
</resources>
